--- a/.gitignore
+++ b/.gitignore
@@ -282,7 +282,7 @@ Temporary Items
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 
-### Python Patch ###
+### Python Patch  ###
 # Poetry local configuration file - https://python-poetry.org/docs/configuration/#local-configuration
 poetry.toml
 
@@ -305,5 +305,8 @@ poetry.toml
 # Ignore all local history of files
 .history
 .ionide
+
+# sqlite
+*.db 
 
 # End of https://www.toptal.com/developers/gitignore/api/python,flask,macos,visualstudiocode
